// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleBoxGroup renders default 1`] = `
.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 0;
}

.emotion-0>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-right: 16px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-1>* {
  height: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-2>* {
  height: 100%;
}

.emotion-3 {
  display: block;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5,
.emotion-5>* {
  height: 100%;
}

.emotion-6 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-6>div {
  height: 100%;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-6:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-7 {
  padding: 16px;
}

<ToggleBoxGroup
  id="default"
>
  <Flex
    align="stretch"
    direction="row"
    gutterSize="m"
    justify="flex-start"
    wrap="nowrap"
  >
    <div
      className="emotion-0"
      data-cy="flex"
    >
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-exosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="exosphere"
            isActive={false}
            key=".0"
            name="default"
            onChange={[Function]}
            type="radio"
            value="exosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="exosphere"
              isActive={false}
              name="default"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <label
                className="emotion-3"
                htmlFor="exosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="exosphere"
                  name="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="exosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Exosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-thermosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="thermosphere"
            isActive={false}
            key=".1"
            name="default"
            onChange={[Function]}
            type="radio"
            value="thermosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="thermosphere"
              isActive={false}
              name="default"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <label
                className="emotion-3"
                htmlFor="thermosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="thermosphere"
                  name="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="thermosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Thermosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-mesosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="mesosphere"
            isActive={false}
            key=".2"
            name="default"
            onChange={[Function]}
            type="radio"
            value="mesosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="mesosphere"
              isActive={false}
              name="default"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <label
                className="emotion-3"
                htmlFor="mesosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="mesosphere"
                  name="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="mesosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Mesosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
    </div>
  </Flex>
</ToggleBoxGroup>
`;

exports[`ToggleBoxGroup renders with a label 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  padding: 0;
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 0;
}

.emotion-2>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-2>*:not(:last-child) {
    padding-right: 16px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-2>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-3>* {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-4>* {
  height: 100%;
}

.emotion-5 {
  display: block;
}

.emotion-6 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-7,
.emotion-7>* {
  height: 100%;
}

.emotion-8 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-8>div {
  height: 100%;
}

.emotion-8:hover,
.emotion-8:focus,
.emotion-8:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-8:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-9 {
  padding: 16px;
}

<ToggleBoxGroup
  id="default"
  label="Atmosphere layer"
>
  <fieldset
    className="emotion-0"
  >
    <legend
      className="emotion-1"
    >
      Atmosphere layer
    </legend>
    <Flex
      align="stretch"
      direction="row"
      gutterSize="m"
      justify="flex-start"
      wrap="nowrap"
    >
      <div
        className="emotion-2"
        data-cy="flex"
      >
        <FlexItem
          className="emotion-3"
          flex="grow"
          key="buttonWrapper-exosphere"
        >
          <div
            className="emotion-4"
            data-cy="flexItem"
          >
            <ToggleBox
              id="exosphere"
              isActive={false}
              key=".0"
              name="default"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <ToggleWrapper
                disabled={false}
                id="exosphere"
                isActive={false}
                name="default"
                onChange={[Function]}
                type="radio"
                value="exosphere"
              >
                <label
                  className="emotion-5"
                  htmlFor="exosphere"
                >
                  <input
                    aria-checked={false}
                    checked={false}
                    className="emotion-6"
                    data-cy="toggleWrapper-input"
                    disabled={false}
                    id="exosphere"
                    name="default"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="exosphere"
                  />
                  <div
                    className="emotion-7"
                  >
                    <ButtonCard
                      disabled={false}
                      hasFocus={false}
                      isActive={false}
                      isInput={true}
                      paddingSize="m"
                    >
                      <div
                        className="emotion-8"
                        data-cy="buttonCard"
                      >
                        <div
                          className="emotion-9"
                        >
                          Exosphere
                        </div>
                      </div>
                    </ButtonCard>
                  </div>
                </label>
              </ToggleWrapper>
            </ToggleBox>
          </div>
        </FlexItem>
        <FlexItem
          className="emotion-3"
          flex="grow"
          key="buttonWrapper-thermosphere"
        >
          <div
            className="emotion-4"
            data-cy="flexItem"
          >
            <ToggleBox
              id="thermosphere"
              isActive={false}
              key=".1"
              name="default"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <ToggleWrapper
                disabled={false}
                id="thermosphere"
                isActive={false}
                name="default"
                onChange={[Function]}
                type="radio"
                value="thermosphere"
              >
                <label
                  className="emotion-5"
                  htmlFor="thermosphere"
                >
                  <input
                    aria-checked={false}
                    checked={false}
                    className="emotion-6"
                    data-cy="toggleWrapper-input"
                    disabled={false}
                    id="thermosphere"
                    name="default"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="thermosphere"
                  />
                  <div
                    className="emotion-7"
                  >
                    <ButtonCard
                      disabled={false}
                      hasFocus={false}
                      isActive={false}
                      isInput={true}
                      paddingSize="m"
                    >
                      <div
                        className="emotion-8"
                        data-cy="buttonCard"
                      >
                        <div
                          className="emotion-9"
                        >
                          Thermosphere
                        </div>
                      </div>
                    </ButtonCard>
                  </div>
                </label>
              </ToggleWrapper>
            </ToggleBox>
          </div>
        </FlexItem>
        <FlexItem
          className="emotion-3"
          flex="grow"
          key="buttonWrapper-mesosphere"
        >
          <div
            className="emotion-4"
            data-cy="flexItem"
          >
            <ToggleBox
              id="mesosphere"
              isActive={false}
              key=".2"
              name="default"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <ToggleWrapper
                disabled={false}
                id="mesosphere"
                isActive={false}
                name="default"
                onChange={[Function]}
                type="radio"
                value="mesosphere"
              >
                <label
                  className="emotion-5"
                  htmlFor="mesosphere"
                >
                  <input
                    aria-checked={false}
                    checked={false}
                    className="emotion-6"
                    data-cy="toggleWrapper-input"
                    disabled={false}
                    id="mesosphere"
                    name="default"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="mesosphere"
                  />
                  <div
                    className="emotion-7"
                  >
                    <ButtonCard
                      disabled={false}
                      hasFocus={false}
                      isActive={false}
                      isInput={true}
                      paddingSize="m"
                    >
                      <div
                        className="emotion-8"
                        data-cy="buttonCard"
                      >
                        <div
                          className="emotion-9"
                        >
                          Mesosphere
                        </div>
                      </div>
                    </ButtonCard>
                  </div>
                </label>
              </ToggleWrapper>
            </ToggleBox>
          </div>
        </FlexItem>
      </div>
    </Flex>
  </fieldset>
</ToggleBoxGroup>
`;

exports[`ToggleBoxGroup renders with a selected ToggleBox 1`] = `
.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 0;
}

.emotion-0>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-right: 16px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-1>* {
  height: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-2>* {
  height: 100%;
}

.emotion-3 {
  display: block;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5,
.emotion-5>* {
  height: 100%;
}

.emotion-6 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-6>div {
  height: 100%;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-6:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-7 {
  padding: 16px;
}

.emotion-20 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-20>div {
  height: 100%;
}

.emotion-20:hover,
.emotion-20:focus,
.emotion-20:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-20:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-20,
.emotion-20:hover,
.emotion-20:focus {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-20:focus {
  background-color: var(--themeBgHover, #F7F8F9);
}

<ToggleBoxGroup
  id="selectedItems"
  selectedItems={
    Array [
      "mesosphere",
    ]
  }
>
  <Flex
    align="stretch"
    direction="row"
    gutterSize="m"
    justify="flex-start"
    wrap="nowrap"
  >
    <div
      className="emotion-0"
      data-cy="flex"
    >
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-exosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="exosphere"
            isActive={false}
            key=".0"
            name="selectedItems"
            onChange={[Function]}
            type="radio"
            value="exosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="exosphere"
              isActive={false}
              name="selectedItems"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <label
                className="emotion-3"
                htmlFor="exosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="exosphere"
                  name="selectedItems"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="exosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Exosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-thermosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="thermosphere"
            isActive={false}
            key=".1"
            name="selectedItems"
            onChange={[Function]}
            type="radio"
            value="thermosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="thermosphere"
              isActive={false}
              name="selectedItems"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <label
                className="emotion-3"
                htmlFor="thermosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="thermosphere"
                  name="selectedItems"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="thermosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Thermosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-mesosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="mesosphere"
            isActive={true}
            key=".2"
            name="selectedItems"
            onChange={[Function]}
            type="radio"
            value="mesosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="mesosphere"
              isActive={true}
              name="selectedItems"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <label
                className="emotion-3"
                htmlFor="mesosphere"
              >
                <input
                  aria-checked={true}
                  checked={true}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="mesosphere"
                  name="selectedItems"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="mesosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={true}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-20"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Mesosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
    </div>
  </Flex>
</ToggleBoxGroup>
`;

exports[`ToggleBoxGroup renders with custom direction and gutter size 1`] = `
.emotion-0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 0;
  column-gap: 0;
  row-gap: 48px;
}

.emotion-0>div {
  width: 100%;
}

@supports not (column-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-right: 0;
  }
}

@supports not (row-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-bottom: 48px;
  }
}

.emotion-1>* {
  height: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-2>* {
  height: 100%;
}

.emotion-3 {
  display: block;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5,
.emotion-5>* {
  height: 100%;
}

.emotion-6 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-6>div {
  height: 100%;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-6:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-7 {
  padding: 16px;
}

<ToggleBoxGroup
  direction="column"
  gutterSize="xxl"
  id="customLayoutProps"
>
  <Flex
    align="stretch"
    direction="column"
    gutterSize="xxl"
    justify="flex-start"
    wrap="nowrap"
  >
    <div
      className="emotion-0"
      data-cy="flex"
    >
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-exosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="exosphere"
            isActive={false}
            key=".0"
            name="customLayoutProps"
            onChange={[Function]}
            type="radio"
            value="exosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="exosphere"
              isActive={false}
              name="customLayoutProps"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <label
                className="emotion-3"
                htmlFor="exosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="exosphere"
                  name="customLayoutProps"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="exosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Exosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-thermosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="thermosphere"
            isActive={false}
            key=".1"
            name="customLayoutProps"
            onChange={[Function]}
            type="radio"
            value="thermosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="thermosphere"
              isActive={false}
              name="customLayoutProps"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <label
                className="emotion-3"
                htmlFor="thermosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="thermosphere"
                  name="customLayoutProps"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="thermosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Thermosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-1"
        flex="grow"
        key="buttonWrapper-mesosphere"
      >
        <div
          className="emotion-2"
          data-cy="flexItem"
        >
          <ToggleBox
            id="mesosphere"
            isActive={false}
            key=".2"
            name="customLayoutProps"
            onChange={[Function]}
            type="radio"
            value="mesosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="mesosphere"
              isActive={false}
              name="customLayoutProps"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <label
                className="emotion-3"
                htmlFor="mesosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-4"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="mesosphere"
                  name="customLayoutProps"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="mesosphere"
                />
                <div
                  className="emotion-5"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-6"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-7"
                      >
                        Mesosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
    </div>
  </Flex>
</ToggleBoxGroup>
`;
